fix: callout content overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -344,7 +344,6 @@ body::-webkit-scrollbar {
     padding: 6px 12px;
     display: flex;
     gap: 12px;
-    overflow: auto;
 
     .icon {
       height: 1.75em;
@@ -353,6 +352,7 @@ body::-webkit-scrollbar {
     }
 
     .content {
+      max-width: calc(100% - 32px);
       p {
         margin: 0;
 
